@@ -1,28 +1,35 @@
 package com.allMighty.business_logic_domain.analysis.analysis_package;
 
 import static com.allMighty.business_logic_domain.analysis.analysis_package.AnalysisPackageMapper.toAnalysisPackageEntity;
+import static com.allMighty.global_operation.filter.JooqConditionBuilder.buildConditions;
 
 import com.allMighty.business_logic_domain.analysis.dto.AnalysisPackageDTO;
 import com.allMighty.enitity.analysis.AnalysisEntity;
 import com.allMighty.enitity.analysis.AnalysisPackageEntity;
 import com.allMighty.global_operation.BaseService;
 import com.allMighty.global_operation.exception_management.exception.BadRequestException;
+import com.allMighty.global_operation.filter.FilterParser;
 import jakarta.transaction.Transactional;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
+import org.jooq.Condition;
 import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
 public class AnalysisPackageService extends BaseService {
 
+  private final FilterParser<PackageFields> filterParser =
+      new FilterParser<>(PackageFields.values());
+
   private final AnalysisPackageRepository analysisPackageRepository;
 
-  public List<AnalysisPackageDTO> getAllAnalysisPackages() {
-
-    return analysisPackageRepository.getAllAnalysisPackages().stream()
+  public List<AnalysisPackageDTO> getAllAnalysisPackages(List<String> filters) {
+    List<Condition> conditions = buildConditions(filters, filterParser);
+    return analysisPackageRepository.getAllAnalysisPackages(conditions).stream()
         .map(AnalysisPackageMapper::toAnalysisPackageDTO)
         .toList();
   }
@@ -43,7 +50,7 @@ public class AnalysisPackageService extends BaseService {
       List<AnalysisEntity> analyses =
           packageDTO.getAnalysisIds().stream()
               .map(id -> em.getReference(AnalysisEntity.class, id))
-              .toList();
+              .collect(Collectors.toList());
       packageEntity.setAnalyses(analyses);
     } else {
       packageEntity.setAnalyses(new ArrayList<>());
@@ -67,7 +74,7 @@ public class AnalysisPackageService extends BaseService {
       List<AnalysisEntity> analyses =
           analysisPackageDTO.getAnalysisIds().stream()
               .map(dtoId -> em.getReference(AnalysisEntity.class, dtoId))
-              .toList();
+              .collect(Collectors.toList());
       packageEntity.setAnalyses(analyses);
     } else {
       packageEntity.setAnalyses(new ArrayList<>());
